<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="horizontal"
	android:gravity="center">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@drawable/bg_activity_main"
		android:gravity="center">
		<Button
			android:layout_height="@dimen/main_button_size"
			android:layout_width="@dimen/main_button_size"
			android:text="@string/control"
			android:textColor="@color/colorCircleButtonText"
			android:background="@drawable/circle_button_seletor"
			android:id="@+id/activity_main_control"/>
		<View
			android:layout_width="@dimen/main_line_size"
			android:layout_height="match_parent"/>

		<Button
			android:layout_height="@dimen/main_button_size"
			android:layout_width="@dimen/main_button_size"
			android:text="@string/setting"
			android:textColor="@color/colorCircleButtonText"
			android:background="@drawable/circle_button_seletor"
			android:id="@+id/activity_main_setting"
			android:visibility="visible"/>

		<View
			android:layout_width="@dimen/main_line_size"
			android:layout_height="match_parent"/>

		<Button
			android:layout_height="@dimen/main_button_size"
			android:layout_width="@dimen/main_button_size"
			android:text="@string/about"
			android:textColor="@color/colorCircleButtonText"
			android:background="@drawable/circle_button_seletor"
			android:id="@+id/activity_main_about"
			android:visibility="visible"/>
	</LinearLayout>

</LinearLayout>

