<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:gravity="center"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="300dp"
		android:layout_height="wrap_content"
		android:background="@color/colorLineBlack"
		android:padding="2dp"
		android:layout_marginTop="10dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:orientation="vertical"
			android:background="@color/colorWhite"
			android:gravity="center"
			android:padding="5dp">

			<TextView
				android:text="@string/target_title"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"/>

			<View
				android:layout_width="match_parent"
				android:layout_height="1dp"
				android:background="@color/colorLineBlack"/>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="40dp">

				<TextView
					android:text="@string/ip"
					android:id="@+id/ip_label"
					android:layout_width="35dp"
					android:layout_height="match_parent"
					android:gravity="center"/>

				<EditText
					android:id="@+id/et_ip"
					android:textSize="12sp"
					android:text="192.168.1.1"
					android:layout_toRightOf="@id/ip_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"/>

			</RelativeLayout>

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="40dp">

				<TextView
					android:text="@string/port"
					android:id="@+id/port_label"
					android:layout_width="35dp"
					android:layout_height="match_parent"
					android:gravity="center"/>

				<EditText
					android:id="@+id/et_port"
					android:textSize="12sp"
					android:text="2001"
					android:layout_toRightOf="@id/port_label"
					android:layout_width="match_parent"
					android:layout_height="match_parent"/>

			</RelativeLayout>

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

