<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical"
	android:gravity="center">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="@dimen/title_bar_height"
		android:orientation="horizontal"
		android:visibility="visible"
		android:padding="1dp"
		android:gravity="center_vertical">

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<View
				android:layout_width="@dimen/default_line_size"
				android:layout_height="match_parent"/>

			<TextView
				android:text="@string/power_show"
				android:textSize="@dimen/default_show_text_size"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:textColor="@color/colorTextBase"
				android:id="@+id/activitycontrolTextViewPower"/>
		</LinearLayout>

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:orientation="horizontal"
			android:gravity="center_vertical"
			android:layout_centerHorizontal="true">

			<TextView
				android:text="@string/control_title"
				android:textColor="@color/colorTextBase"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:background="@android:color/transparent"
				android:id="@+id/activitycontrolTextViewTitle"/>
		</LinearLayout>

		<LinearLayout
			android:layout_height="match_parent"
			android:layout_width="wrap_content"
			android:layout_alignParentTop="true"
			android:layout_alignParentRight="true"
			android:orientation="horizontal"
			android:gravity="center_vertical">

			<Button
				android:layout_height="@dimen/circle_size"
				android:layout_width="@dimen/circle_size"
				android:background="@drawable/circle_button_seletor"
				android:text="@string/screenshot"
				android:padding="2dp"
				android:textSize="@dimen/circle_text_size"
				android:textColor="@color/colorCircleButtonText"
				android:id="@+id/activitycontrolButtonScreenshot"/>

			<View
				android:layout_width="@dimen/default_line_size"
				android:layout_height="match_parent"/>

			<Button
				android:layout_height="@dimen/circle_size"
				android:layout_width="@dimen/circle_size"
				android:background="@drawable/circle_button_seletor"
				android:text="@string/hide"
				android:padding="2dp"
				android:textSize="@dimen/circle_text_size"
				android:textColor="@color/colorCircleButtonText"
				android:id="@+id/activitycontrolButtonVisibility"/>

			<View
				android:layout_width="@dimen/default_line_size"
				android:layout_height="match_parent"/>

			<Button
				android:layout_height="@dimen/circle_size"
				android:layout_width="@dimen/circle_size"
				android:background="@drawable/circle_button_seletor"
				android:text="@string/exit"
				android:padding="2dp"
				android:textSize="@dimen/circle_text_size"
				android:textColor="@color/colorCircleButtonText"
				android:id="@+id/activitycontrolButtonExit"/>

			<View
				android:layout_width="@dimen/default_line_size"
				android:layout_height="match_parent"/>

		</LinearLayout>

	</RelativeLayout>

	<FrameLayout
		android:id="@+id/acrivity_control_container"
		android:layout_height="match_parent"
		android:layout_width="match_parent"
		android:visibility="visible">

		<RelativeLayout
			android:id="@+id/activity_control_layer0"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<SurfaceView
				android:id="@+id/activity_control_video"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_centerInParent="true"
				android:visibility="visible"
				android:background="@color/colorSurfaceBackground"/>

		</RelativeLayout>

		<RelativeLayout
			android:id="@+id/activity_control_layer1"
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/activitycontrolTextViewShow0"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_marginLeft="3dp"
					android:text="@string/show_info_0"
					android:textColor="@color/colorShowText0"
					android:textSize="@dimen/default_show_text_size" />

			</LinearLayout>

			<LinearLayout
				android:layout_height="@dimen/control_panel_height"
				android:layout_width="match_parent"
				android:orientation="horizontal"
				android:layout_alignParentBottom="true">

				<FrameLayout
					android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:layout_weight="1.0">

					<include
						layout="@layout/walking_direction"
						android:layout_height="match_parent"
						android:layout_width="match_parent"
						android:id="@+id/activitycontrolinclude1"
						android:visibility="visible"/>

				</FrameLayout>

				<RelativeLayout
					android:layout_height="match_parent"
					android:layout_width="@dimen/control_center_panel_width">

					<include
						layout="@layout/bottom_control"
						android:layout_height="wrap_content"
						android:layout_width="match_parent"
						android:layout_alignParentBottom="true"
						android:id="@+id/activitycontrolinclude2"/>

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_above="@id/activitycontrolinclude2"
						android:layout_marginBottom="20dp"
						android:gravity="center"
						android:orientation="horizontal">

						<TextView
							android:id="@+id/activitycontrolTextViewShow1"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:layout_marginLeft="3dp"
							android:text="@string/show_info_1"
							android:textSize="@dimen/default_show_text_size"
							android:textColor="@color/colorShowText1" />

					</LinearLayout>

				</RelativeLayout>

				<RelativeLayout
					android:layout_height="match_parent"
					android:layout_width="match_parent"
					android:layout_weight="1.0">

					<FrameLayout
						android:layout_height="match_parent"
						android:layout_width="match_parent"
						android:id="@+id/activitycontrolFrameLayout1">

						<include
							layout="@layout/camera_direction"
							android:layout_height="match_parent"
							android:layout_width="match_parent"
							android:id="@+id/activitycontrolinclude3"/>

						<include
							layout="@layout/camera_control"
							android:layout_height="match_parent"
							android:layout_width="match_parent"
							android:id="@+id/activitycontrolinclude4"
							android:visibility="invisible"/>

					</FrameLayout>

				</RelativeLayout>

			</LinearLayout>

		</RelativeLayout>

	</FrameLayout>

</LinearLayout>

